--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App that optimizes images",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "nodemon --exec electron ."
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/ferrovax/image-shrink#readme",
   "devDependencies": {
-    "electron": "^9.0.2"
+    "electron": "^9.0.2",
+    "nodemon": "^2.0.4"
   }
 }
