--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "image-shrink",
+  "productName": "Image Shrink",
   "version": "1.0.0",
   "description": "App that optimizes images",
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "dev": "nodemon --exec electron ."
+    "dev": "nodemon --exec electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true",
+    "package-win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=false --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Image Shrink\"",
+    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=false --out=release-builds"
   },
   "repository": {
     "type": "git",
@@ -19,6 +23,7 @@
   "homepage": "https://github.com/ferrovax/image-shrink#readme",
   "devDependencies": {
     "electron": "^9.0.2",
+    "electron-packager": "^14.2.1",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
